2008-07-10  Joshua Sumali  <jsumali@redhat.com>
	* rt/net/sourceforge/jnlp/runtime/Boot.java: Remove restriction of only
	files ending with .jnlp being loaded. Also refactored a bit.